--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,5 +1,5 @@
 {{#if this.isNewEncryptable}}
-  <Encryptable::Form @onAbort={{this.toggleEncryptableCreating}} @title={{t "encryptable/credential.new.title"}}/>
+  <Encryptable::Form @onAbort={{this.toggleEncryptableCreating}} @title={{t "encryptable/credentials.new.title"}}/>
 {{/if}}
 {{#if this.isFileSharing}}
   <Encryptable::Form @onAbort={{this.toggleFileSharing}} @title={{t "encryptable/sharing/file.new.title"}} @sharing={{true}}/>
@@ -41,7 +41,7 @@
       <dd.menu @align="right" as |ddm|>
         <ddm.item>
           <a role="button" class="dropdown-item" {{on "click" this.toggleEncryptableCreating}}>
-            {{t "encryptable/credential.new.title"}}
+            {{t "encryptable/credentials.new.title"}}
           </a>
         </ddm.item>
         <ddm.item>
