Fix translation bugs

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -59,7 +59,7 @@
       </DeleteWithConfirmation>
       <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
         <img class="icon-medium-button d-inline" src="/assets/images/share.svg" alt="share">
-        <BsTooltip @title={{t "encryptable/credential.share.title"}} @delayShow="1000" />
+        <BsTooltip @title={{t "encryptable/credentials.share.title"}} @delayShow="1000" />
       </a>
     </div>
   </div>
