--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -59,7 +59,7 @@
     <div class="d-flex align-items-center text-share-file" href="https://github.com/puzzle/cryptopus/wiki/User-manual">
     <a role="button" {{on "click" this.toggleFileSharing}}>
       <img class="icon-share-file" src="/assets/images/share-blue.svg" alt="shareIcon">
-      <span>{{t "encryptable/credential.share.title"}}</span>
+      <span>{{t "encryptable/credentials.share.title"}}</span>
       </a>
     </div>
   </div>
