Begin with loading spinner

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -21,6 +21,7 @@ $font-family-sans-serif: var(--pzsh-font-family) !default;
 @import "background-colors";
 @import "dashboard";
 @import "dashboard-card";
+@import "spinner";
 
 .w-250 {
   width: 250px;
