--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -19,7 +19,7 @@
     {{/if}}
 
     {{#if this.navService.showSideNavBar}}
-      <div class="mb-5 ml-270px" role="main">
+      <div class="mb-5 pl-3 pt-3 d-flex flex-column flex-1" role="main">
         {{outlet}}
       </div>
     {{else}}
