--- a/frontend/app/templates/components/team/show.hbs
+++ b/frontend/app/templates/components/team/show.hbs
@@ -29,6 +29,10 @@
         {{/if}}
       </div>
 
+      <div>
+        <img class="encryption-label" src="/assets/images/{{@team.encryptionAlgorithmImageName}}.svg" alt="Algorithm label">
+        <BsTooltip @title="{{t "tooltips.encryption_algorithm"}}{{@team.encryptionAlgorithm}}{{t "tooltips.key_size"}}{{@team.passwordBytesize}} bytes" @delayShow="1000" />
+      </div>
 
       <div class="col-auto pr-0 justify-content-between d-none d-sm-flex align-items-center ">
         <span class="mx-1" role="button" {{on "click" this.toggleFolderCreating}}>
