--- a/frontend/app/styles/side-nav-bar.scss
+++ b/frontend/app/styles/side-nav-bar.scss
@@ -1,11 +1,13 @@
-.sidebar {
-  top: 0;
-  left: 0;
-  z-index: 999;
-  color: #fff;
-  transition: all 0.3s;
-  float: left;
-  margin-bottom: -50px !important;
+$sidebar-height: calc(90vh - 253px);
+
+#sidebar {
+  height: $sidebar-height;
+  max-height: $sidebar-height;
+}
+
+.side-scrollbar {
+  height: $sidebar-height;
+  overflow-y: scroll;
 }
 
 #nav-side-bar-container {
@@ -27,12 +29,6 @@
 
 .p-0 {
   padding: 0 !important;
-}
-
-.list-group.list-group-root {
-  width: 100%;
-  padding: 0;
-  overflow: hidden;
 }
 
 .button-group {
@@ -77,7 +73,7 @@
   padding-top: 7px !important;
 }
 
-.list-group-item:last-child {
+.list-group-item:last-of-type {
   margin-bottom: 0;
 }
 
@@ -90,7 +86,6 @@
 
 .side-nav-bar-teams-list {
   overflow-y: auto;
-  height: auto;
 }
 
 .list-group-item[aria-expanded="true"] {
@@ -132,7 +127,6 @@
   }
 
   .teams-list {
-    max-height: calc(100vh - 300px);
     overflow-y: scroll;
     margin-top: 10px;
   }
@@ -203,8 +197,6 @@
   }
 
   .scroll-bar {
-    overflow-y: scroll;
-    max-height: calc(100vh - 163px);
     margin-top: 5px;
   }
 }
