--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -456,3 +456,16 @@ h5, h6 {
     bottom: 11em !important;
   }
 }
+
+.fallback-info-banner {
+  background-color: orange;
+  height: 50px;
+  line-height: 50px;
+  align-content: center;
+  text-align: center;
+}
+
+// .fallback-info-banner span {
+  // vertical-align: middle;
+// }
+  
