Implement new fallback info (#651)

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -456,3 +456,11 @@ h5, h6 {
     bottom: 11em !important;
   }
 }
+
+.fallback-info-banner {
+  background-color: orange;
+  height: 50px;
+  line-height: 50px;
+  align-content: center;
+  text-align: center;
+}
