--- a/frontend/app/styles/dashboard.scss
+++ b/frontend/app/styles/dashboard.scss
@@ -6,7 +6,7 @@
   padding-right: calc(15 * var(--pzsh-spacer));
   padding-left: calc(15 * var(--pzsh-spacer));
 
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .show-all-btn {
