--- a/frontend/app/templates/components/folder/show.hbs
+++ b/frontend/app/templates/components/folder/show.hbs
@@ -50,7 +50,7 @@
     {{/if}}
 
     <div class="row">
-      <div class="col">
+      <div class="col pl-3 pr-0">
         {{#if this.shouldRenderEncryptables}}
           {{#each @folder.encryptables as |encryptable|}}
             <div class="encryptable-row px-3 py-1">
