--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -1,60 +1,58 @@
 <div id="sidebar">
-  <nav>
-    <div class="" id="nav-side-bar-container" {{did-insert this.setupModal this}}>
-      <div class="d-flex justify-content-center list-group-top-button list-group-item-action border-0">
-        <BsButtonGroup class="button-group" @type="radio" @value={{this.showsFavourites}} @onChange={{this.toggleFavourites}} as |bg|>
-          <bg.button class="toggle-button" @value={{false}}>
-            <img class="icon icon-button" src="/assets/images/members{{unless this.showsFavourites "-filled"}}.svg" alt="">
-            <BsTooltip @title={{t "tooltips.all_teams"}} @delayShow="1000" />
-          </bg.button>
-          <bg.button class="toggle-button" @value={{true}}>
-            <img class="icon icon-button" src="/assets/images/star{{if this.showsFavourites "-filled"}}.svg" alt="star">
-            <BsTooltip @title={{t "tooltips.favorites"}} @delayShow="1000" />
-          </bg.button>
-        </BsButtonGroup>
-      </div>
-      <div class="side-scrollbar pr-2">
-        {{#if this.navService.availableTeams}}
-          {{#each this.navService.availableTeams as |team|}}
-            <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
-              {{#if team.isPersonalTeam}}
-                <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "member-white.svg" "member.svg"}}" alt="">
-              {{else}}
-                {{#if team.private}}
-                  <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "encrypted_small-white.svg" "encrypted_small.svg"}}" alt="">
-                {{else}}
-                  <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "members-white.svg" "members.svg"}}" alt="">
-                {{/if}}
-              {{/if}}
-              {{#if team.isPersonalTeam}}
-                {{truncate this.userService.username 18}}
-              {{else}}
-                {{truncate team.name 18}}
-              {{/if}}
-              {{#if (not team.folders)}}
-              {{else if (and team.folders (or (not (eq team this.navService.selectedTeam)) this.collapsed))}}
-                <img class="icon icon-button-angle float-right" src="/assets/images/angle-left.svg" alt="<">
-              {{else}}
-                <img class="icon icon-button-angle float-right" src="/assets/images/angle-down.svg" alt="v">
-              {{/if}}
-            </a>
-            {{#if (or team.folders (eq team this.navService.selectedTeam))}}
-              <BsCollapse class="list-group" id="nav-folders-{{team.id}}" @collapsed={{or (not (eq team this.navService.selectedTeam)) this.collapsed}}>
-                {{#each team.folders as |folder|}}
-                  <a role="button"  class="list-group-item list-folder-item {{if (eq folder this.navService.selectedFolder) "bg-blue-three" "bg-blue-one"}}" {{on "click" (fn this.setSelectedFolder folder)}}>
-                    <img class="icon icon-button mr-1" src="/assets/images/folder.svg" alt="">
-                    {{truncate folder.name 15}}
-                  </a>
-                {{/each}}
-              </BsCollapse>
-            {{/if}}
-          {{/each}}
-        {{else if this.navService.isLoadingTeams}}
-          <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.loading"}}</div>
-        {{else}}
-          <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.none_available"}}</div>
-        {{/if}}
-      </div>
+  <div id="nav-side-bar-container" style="height: 500px; overflow-y: scroll" {{did-insert this.setupModal this}}>
+    <div class="d-flex justify-content-center list-group-top-button list-group-item-action border-0 mb-3">
+      <BsButtonGroup class="button-group" @type="radio" @value={{this.showsFavourites}} @onChange={{this.toggleFavourites}} as |bg|>
+        <bg.button class="toggle-button" @value={{false}}>
+          <img class="icon icon-button" src="/assets/images/members{{unless this.showsFavourites "-filled"}}.svg" alt="">
+          <BsTooltip @title={{t "tooltips.all_teams"}} @delayShow="1000" />
+        </bg.button>
+        <bg.button class="toggle-button" @value={{true}}>
+          <img class="icon icon-button" src="/assets/images/star{{if this.showsFavourites "-filled"}}.svg" alt="star">
+          <BsTooltip @title={{t "tooltips.favorites"}} @delayShow="1000" />
+        </bg.button>
+      </BsButtonGroup>
     </div>
-  </nav>
+    <div class="side-scrollbar pr-2">
+      {{#if this.navService.availableTeams}}
+        {{#each this.navService.availableTeams as |team|}}
+          <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
+            {{#if team.isPersonalTeam}}
+              <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "member-white.svg" "member.svg"}}" alt="">
+            {{else}}
+              {{#if team.private}}
+                <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "encrypted_small-white.svg" "encrypted_small.svg"}}" alt="">
+              {{else}}
+                <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "members-white.svg" "members.svg"}}" alt="">
+              {{/if}}
+            {{/if}}
+            {{#if team.isPersonalTeam}}
+              {{truncate this.userService.username 18}}
+            {{else}}
+              {{truncate team.name 18}}
+            {{/if}}
+            {{#if (not team.folders)}}
+            {{else if (and team.folders (or (not (eq team this.navService.selectedTeam)) this.collapsed))}}
+              <img class="icon icon-button-angle float-right" src="/assets/images/angle-left.svg" alt="<">
+            {{else}}
+              <img class="icon icon-button-angle float-right" src="/assets/images/angle-down.svg" alt="v">
+            {{/if}}
+          </a>
+          {{#if (or team.folders (eq team this.navService.selectedTeam))}}
+            <BsCollapse class="list-group" id="nav-folders-{{team.id}}" @collapsed={{or (not (eq team this.navService.selectedTeam)) this.collapsed}}>
+              {{#each team.folders as |folder|}}
+                <a role="button"  class="list-group-item ml-3 list-folder-item {{if (eq folder this.navService.selectedFolder) "bg-blue-three" "bg-blue-one"}}" {{on "click" (fn this.setSelectedFolder folder)}}>
+                  <img class="icon icon-button mr-1" src="/assets/images/folder.svg" alt="">
+                  {{truncate folder.name 15}}
+                </a>
+              {{/each}}
+            </BsCollapse>
+          {{/if}}
+        {{/each}}
+      {{else if this.navService.isLoadingTeams}}
+        <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.loading"}}</div>
+      {{else}}
+        <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.none_available"}}</div>
+      {{/if}}
+    </div>
+  </div>
 </div>
