--- a/frontend/app/templates/teams/index.hbs
+++ b/frontend/app/templates/teams/index.hbs
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-column flex-1 py-2">
-  <div class="mt-4 d-flex flex-column flex-1">
+  <div class="d-flex flex-column flex-1">
     {{#if this.loading.isLoading}}
       <div class="h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="lds-roller">
