--- a/frontend/app/styles/encryptable-show.scss
+++ b/frontend/app/styles/encryptable-show.scss
@@ -21,10 +21,6 @@
   width: 250px;
 }
 
-.sensitive-input {
-  width: 163px !important;
-}
-
 .show-text-sm {
   margin-top: 0px !important;
   position: absolute;
@@ -101,7 +97,7 @@
   z-index: 5;
   cursor: pointer;
 
-  width: 80%;
+  width: 159px;
   font-size: 14px;
   border: 1px solid #cdd3d9;
   display: flex;
