--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -9,7 +9,7 @@
   </pzsh-hero>
   {{outlet}}
 {{else}}
-  <div class="content mt-lg-4 pb-sm-4">
+  <div class="content pt-lg-4 pb-sm-4">
     {{#if this.navService.showSideNavBar}}
       {{#unless this.screenWidthService.isShownOnHamburgermenu}}
         <SideNavBar/>
