Update changelog, version and update secure fields

--- a/frontend/app/styles/encryptable-show.scss
+++ b/frontend/app/styles/encryptable-show.scss
@@ -98,11 +98,12 @@
   cursor: pointer;
 
   width: 159px;
+  margin-left: 43px;
   font-size: 14px;
   border: 1px solid #cdd3d9;
   display: flex;
   background: #e8ebee;
-  border-radius: 3px 0 0 3px;
+  border-radius: 0 3px 3px 0;
   color: black;
   position: absolute;
   justify-content: center;
