--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -53,10 +53,11 @@
       </div>
     {{else}}
       <div class="result-username input-group has-validation mb-3">
-        <Input id="cleartext-username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
-        <div class="input-group-append">
-          <span class="input-group-text has-validation"><img class="icon-button encryptable-show-back" src="/assets/images/lock.svg" alt="lock"></span>
+        <div class="input-group-prepend has-validation">
+          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{teamData.encryptionAlgorithm}} {{t "tooltips.key_size"}} {{teamData.passwordBitsize}} bits" @delayShow="1000" />
+          <span class="input-group-text"><img class="icon-button encryptable-show-back" src="/assets/images/lock.svg" alt="lock"></span>
         </div>
+        <Input id="cleartext-username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
         <i class="uil uil-airplay"></i>
         <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextUsername}} @success={{fn this.onCopied "username"}}>
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
@@ -65,15 +66,13 @@
 
 
       <div class="result-password input-group has-validation">
-        <Input id="cleartext-password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
-        <a role="button" class="show-password-button {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
-        <div class="input-group-append">
-          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{}} {{t "tooltips.key_size"}} 256 bits" @delayShow="1000" />
+        <div class="input-group-prepend has-validation">
+          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{1}} {{t "tooltips.key_size"}} {{1}} bits" @delayShow="1000" />
           <span class="input-group-text"><img class="icon-button encryptable-show-back" src="/assets/images/lock.svg" alt="lock"></span>
         </div>
+        <a role="button" class="show-password-button {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
+        <Input id="cleartext-password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
         <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPassword}} @success={{fn this.onCopied "password"}}>
-          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} aes256 {{t "tooltips.key_size"}} 256 bits" @delayShow="1000" />
-
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
         </CopyButton>
       </div>
