--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -54,7 +54,7 @@
     {{else}}
       <div class="result-username input-group has-validation mb-3">
         <div class="input-group-prepend has-validation">
-          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{teamData.encryptionAlgorithm}} {{t "tooltips.key_size"}} {{teamData.passwordBitsize}} bits" @delayShow="1000" />
+          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{@encryptable.encryptionAlgorithm}} {{t "tooltips.key_size"}} {{@encryptable.teamPasswordBitsize}} bits" @delayShow="1000" />
           <span class="input-group-text"><img class="icon-button encryptable-show-back" src="/assets/images/lock.svg" alt="lock"></span>
         </div>
         <Input id="cleartext-username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
@@ -67,7 +67,7 @@
 
       <div class="result-password input-group has-validation">
         <div class="input-group-prepend has-validation">
-          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{1}} {{t "tooltips.key_size"}} {{1}} bits" @delayShow="1000" />
+          <BsTooltip @title="{{t "tooltips.encryption_algorithm"}} {{@encryptable.encryptionAlgorithm}} {{t "tooltips.key_size"}} {{@encryptable.teamPasswordBitsize}} bits" @delayShow="1000" />
           <span class="input-group-text"><img class="icon-button encryptable-show-back" src="/assets/images/lock.svg" alt="lock"></span>
         </div>
         <a role="button" class="show-password-button {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
