--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -21,6 +21,16 @@ $font-family-sans-serif: var(--pzsh-font-family) !default;
 @import "background-colors";
 @import "dashboard";
 @import "dashboard-card";
+@import "spinner";
+
+html, body, body > .ember-view {
+  height: 100%;
+}
+
+#ember {
+  display: flex;
+  flex-direction: column;
+}
 
 .w-250 {
   width: 250px;
